[package]
name = "delay-api"
version = "0.1.0"
edition = "2021"
description = "A wrapper for the inofficial Deutsche Bahn time table api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
enumflags2 = "0.7.7"
lazy-regex = "2.5.0"
lazy_static = "1.4.0"
regex = "1.8.1"
reqwest = "0.11.16"
scraper = "0.16.0"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
